# iso20022-bridge-mcp

./: README.md  llms.txt  pyproject.toml  server.json  server.py
tests/: test_server.py
