[project]
name = "iso20022-bridge-mcp"
version = "0.1.0"
description = "ISO 20022 / SWIFT financial-messaging bridge to ONE OS / CSOAI — parse, validate, modernise, govern (AML/DORA). CSOAI Layer-0 legacy-bridge family."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CSOAI-ORG"}]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]

[project.scripts]
iso20022-bridge-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
